--- a/SCUTChat/Base.lproj/Main.storyboard
+++ b/SCUTChat/Base.lproj/Main.storyboard
@@ -126,6 +126,10 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kcO-5f-l3I" userLabel="CharToolBar">
                                 <rect key="frame" x="0.0" y="519" width="320" height="49"/>
                                 <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chatBar_textBg" translatesAutoresizingMaskIntoConstraints="NO" id="nTb-5S-Pbr">
+                                        <rect key="frame" x="41" y="8" width="200" height="30"/>
+                                        <rect key="contentStretch" x="0.5" y="0.5" width="0.0" height="0.0"/>
+                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Kh-a7-wB1" userLabel="VoiceBtn">
                                         <rect key="frame" x="8" y="8" width="30" height="30"/>
                                         <constraints>
@@ -133,6 +137,9 @@
                                             <constraint firstAttribute="width" constant="30" id="moI-u1-bAD"/>
                                         </constraints>
                                         <state key="normal" image="chatBar_record"/>
+                                        <connections>
+                                            <action selector="voiceAction:" destination="0wz-Ve-mRh" eventType="touchUpInside" id="tpf-te-6Fh"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17i-jk-tbN" userLabel="Facebtn">
                                         <rect key="frame" x="244" y="8" width="30" height="30"/>
@@ -152,27 +159,46 @@
                                     </button>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gNK-md-irM">
                                         <rect key="frame" x="41" y="8" width="200" height="30"/>
-                                        <color key="backgroundColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="send"/>
                                         <connections>
                                             <outlet property="delegate" destination="0wz-Ve-mRh" id="UWK-0z-bER"/>
                                         </connections>
                                     </textView>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4H9-Pd-Zyg" userLabel="RecordBtn">
+                                        <rect key="frame" x="41" y="8" width="200" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="cYy-2r-h6c"/>
+                                        </constraints>
+                                        <state key="normal" title="按住录音"/>
+                                        <state key="selected" title="松开发送"/>
+                                        <connections>
+                                            <action selector="beginRecordAction:" destination="0wz-Ve-mRh" eventType="touchDown" id="t6E-7z-ei4"/>
+                                            <action selector="cancelRecordAction:" destination="0wz-Ve-mRh" eventType="touchUpOutside" id="agj-73-sDc"/>
+                                            <action selector="endRecordAction:" destination="0wz-Ve-mRh" eventType="touchUpInside" id="B6l-K4-QCQ"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="nTb-5S-Pbr" firstAttribute="top" secondItem="kcO-5f-l3I" secondAttribute="top" constant="8" id="2EW-Mn-JCf"/>
+                                    <constraint firstAttribute="bottom" secondItem="nTb-5S-Pbr" secondAttribute="bottom" constant="11" id="AMy-EH-wIw"/>
+                                    <constraint firstAttribute="bottom" secondItem="4H9-Pd-Zyg" secondAttribute="bottom" constant="11" id="B55-yf-9RO"/>
                                     <constraint firstAttribute="bottom" secondItem="1Kh-a7-wB1" secondAttribute="bottom" constant="11" id="IwH-Xb-fWV"/>
                                     <constraint firstAttribute="bottom" secondItem="e9S-fq-fZt" secondAttribute="bottom" constant="11" id="KUd-t1-Inn"/>
+                                    <constraint firstItem="17i-jk-tbN" firstAttribute="leading" secondItem="4H9-Pd-Zyg" secondAttribute="trailing" constant="3" id="Kve-f6-XOC"/>
                                     <constraint firstAttribute="height" constant="49" id="Mgu-UZ-CXp"/>
                                     <constraint firstAttribute="bottom" secondItem="gNK-md-irM" secondAttribute="bottom" constant="11" id="Oec-6b-sQ7"/>
                                     <constraint firstItem="gNK-md-irM" firstAttribute="leading" secondItem="1Kh-a7-wB1" secondAttribute="trailing" constant="3" id="Thl-s0-iRK"/>
                                     <constraint firstItem="17i-jk-tbN" firstAttribute="leading" secondItem="gNK-md-irM" secondAttribute="trailing" constant="3" id="X0u-62-tZG"/>
+                                    <constraint firstItem="nTb-5S-Pbr" firstAttribute="leading" secondItem="1Kh-a7-wB1" secondAttribute="trailing" constant="3" id="apY-Bh-LWe"/>
                                     <constraint firstItem="1Kh-a7-wB1" firstAttribute="leading" secondItem="kcO-5f-l3I" secondAttribute="leading" constant="8" id="dKU-Hv-9Rp"/>
                                     <constraint firstAttribute="trailing" secondItem="e9S-fq-fZt" secondAttribute="trailing" constant="8" id="hII-Eb-RPr"/>
+                                    <constraint firstItem="17i-jk-tbN" firstAttribute="leading" secondItem="nTb-5S-Pbr" secondAttribute="trailing" constant="3" id="l6V-vY-Aiw"/>
                                     <constraint firstItem="e9S-fq-fZt" firstAttribute="leading" secondItem="17i-jk-tbN" secondAttribute="trailing" constant="8" id="om4-Uo-Yus"/>
                                     <constraint firstItem="gNK-md-irM" firstAttribute="top" secondItem="kcO-5f-l3I" secondAttribute="top" constant="8" id="qcj-x0-f9g"/>
                                     <constraint firstAttribute="bottom" secondItem="17i-jk-tbN" secondAttribute="bottom" constant="11" id="y7a-8g-48x"/>
+                                    <constraint firstItem="4H9-Pd-Zyg" firstAttribute="leading" secondItem="1Kh-a7-wB1" secondAttribute="trailing" constant="3" id="zoj-NF-jqI"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="87" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="L7i-yh-Taw">
@@ -284,12 +310,14 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="inputToolBarBottomConstraint" destination="L6M-cI-RfI" id="2xR-uh-0LX"/>
+                        <outlet property="inputToolBarHegihtConstraint" destination="Mgu-UZ-CXp" id="BY0-7M-rvy"/>
+                        <outlet property="recordBtn" destination="4H9-Pd-Zyg" id="uIF-Sh-pbe"/>
                         <outlet property="tableView" destination="L7i-yh-Taw" id="HT2-oj-e1u"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bxH-Ek-OQt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1069" y="-166"/>
+            <point key="canvasLocation" x="939" y="-166"/>
         </scene>
         <!--Add Firend-->
         <scene sceneID="i7T-P9-1NT">
@@ -420,6 +448,7 @@
         <image name="chatBar_face" width="30" height="30"/>
         <image name="chatBar_more" width="30" height="30"/>
         <image name="chatBar_record" width="30" height="30"/>
+        <image name="chatBar_textBg" width="30" height="30"/>
         <image name="chatListCellHead" width="51" height="51"/>
         <image name="chat_receiver_bg" width="40" height="40"/>
         <image name="chat_sender_bg" width="40" height="40"/>
